--- a/conf/resources/reportes/recupero/nd.html
+++ b/conf/resources/reportes/recupero/nd.html
@@ -245,7 +245,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
@@ -321,7 +321,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
