--- a/conf/resources/reportes/recupero/recibo3.html
+++ b/conf/resources/reportes/recupero/recibo3.html
@@ -198,7 +198,7 @@
 
 	                <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
 	                <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-	                <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+	                <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
 	                <b>Condición frente al IVA:</b> IVA EXENTO<br>
 	            </div>
@@ -285,7 +285,7 @@
 
 	                <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
 	                <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-	                <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+	                <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
 	                <b>Condición frente al IVA:</b> IVA EXENTO<br>
 	            </div>
@@ -371,7 +371,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
@@ -466,7 +466,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
@@ -562,7 +562,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
@@ -659,7 +659,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
