--- a/conf/resources/reportes/recupero/recibo.html
+++ b/conf/resources/reportes/recupero/recibo.html
@@ -152,7 +152,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
@@ -247,7 +247,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
@@ -332,7 +332,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
                          <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
