--- a/conf/resources/reportes/recupero/factura1.html
+++ b/conf/resources/reportes/recupero/factura1.html
@@ -189,6 +189,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     	 <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -266,6 +267,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     	 <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -344,6 +346,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -420,6 +423,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -496,6 +500,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
                          <b>Condición frente al IVA:</b> IVA EXENTO
@@ -572,6 +577,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
                          <b>Condición frente al IVA:</b> IVA EXENTO
