--- a/conf/resources/reportes/recupero/factura.html
+++ b/conf/resources/reportes/recupero/factura.html
@@ -150,6 +150,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     	 <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -227,6 +228,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     	 <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -303,6 +305,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     	 <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
                          <b>Condición frente al IVA:</b> IVA EXENTO
