--- a/conf/resources/reportes/recupero/factura2.html
+++ b/conf/resources/reportes/recupero/factura2.html
@@ -224,6 +224,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -301,6 +302,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -379,6 +381,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -457,6 +460,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -533,6 +537,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -610,6 +615,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
@@ -686,6 +692,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
                          <b>Condición frente al IVA:</b> IVA EXENTO
@@ -762,6 +769,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
                          <b>Condición frente al IVA:</b> IVA EXENTO
@@ -838,6 +846,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                         <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
                          <b>Condición frente al IVA:</b> IVA EXENTO
