--- a/conf/resources/reportes/recupero/recibo4.html
+++ b/conf/resources/reportes/recupero/recibo4.html
@@ -230,6 +230,7 @@
 	</div>
 
 	                <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+	                <b><span class="fantasia"></span></b><br>
 	                <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
 	                <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -317,6 +318,7 @@
 	</div>
 
 	                <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+	                <b><span class="fantasia"></span></b><br>
 	                <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
 	                <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -403,6 +405,7 @@
 	</div>
 
 	                <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+	                <b><span class="fantasia"></span></b><br>
 	                <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
 	                <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -486,6 +489,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -582,6 +586,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -678,6 +683,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -777,6 +783,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -874,6 +881,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -975,6 +983,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
