--- a/conf/resources/reportes/recupero/recibo3.html
+++ b/conf/resources/reportes/recupero/recibo3.html
@@ -197,6 +197,7 @@
 	</div>
 
 	                <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+	                <b><span class="fantasia"></span></b><br>
 	                <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
 	                <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -284,6 +285,7 @@
 	</div>
 
 	                <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+	                <b><span class="fantasia"></span></b><br>
 	                <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
 	                <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -370,6 +372,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -465,6 +468,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -561,6 +565,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
@@ -658,6 +663,7 @@
 					</div>
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
+                     <b><span class="fantasia"></span></b><br>
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 
