--- a/conf/resources/reportes/recupero/libredeuda.html
+++ b/conf/resources/reportes/recupero/libredeuda.html
@@ -177,8 +177,8 @@
 			<tr>
 				<td colspan="2">
 					<h1 style=" font-size: 22px;">CERTIFICADO DE LIBRE DEUDA</h1>
-					<p style=" font-size: 18px;">Por medio del presente CERTIFICADO, se deja expresa constancia que la <b>"OBRA SOCIAL CONDUCTORES DE TRANSPORTE COLECTIVO DE PASAJEROS CUIT 30-65767771-6"</b>, <b>NO REGISTRA DEUDA</b>  con el ente  público descentralizado Parque de la Salud de la Provincia de Misiones Dr. Ramón Madariaga, CUIT Nº 30-71222430-0.</p>
-					<p style=" font-size: 18px;">En Posadas, Capital de la Provincia de Misiones a los 28 días del mes de noviembre del año 2024, se extiende a pedido de la interesada, a los fines previstos en el último párrafo Art 1 R.G. DGR Nº 14/2024.</p>
+					<p style=" font-size: 18px;">Por medio del presente CERTIFICADO, se deja expresa constancia que la <b>"<span class="cliente"></span> CUIT <span class="cuit"></span>"</b>, <b>NO REGISTRA DEUDA</b>  con el ente  público descentralizado Parque de la Salud de la Provincia de Misiones Dr. Ramón Madariaga, CUIT Nº 30-71222430-0.</p>
+					<p style=" font-size: 18px;">En Posadas, Capital de la Provincia de Misiones <span class="dias"></span> del mes de <span class="mes"></span> del año <span class="anio"></span>, se extiende a pedido de la interesada, a los fines previstos en el último párrafo Art 1 R.G. DGR Nº 14/2024.</p>
 				</td>
 			</tr>
 
@@ -192,8 +192,8 @@
 
 			<tr>
 				<td  style="width:50%;padding: 0px;">
-					<p class="qr"></p>
-					<p>Validacion: https://parquesaludmisiones.org.ar/libredeuda=2311</p>
+					<!-- <p class="qr"></p>
+					<p>Validacion: https://parquesaludmisiones.org.ar/libredeuda=2311</p> -->
 
 				</td>
 				<td style=" width:50%; text-align: right; font-size: 15px;">
