--- a/conf/resources/reportes/compras/reportePdf.html
+++ b/conf/resources/reportes/compras/reportePdf.html
@@ -148,6 +148,9 @@
                         }
                         .border_div{
                         }
+                        .tabla-uno{border-collapse: collapse;}
+
+
                     </style>
 </head>
 <body  class="body">
